tests/ui/symbol-names/basic.legacy.stderr
error: symbol-name(_ZN5basic4main17h450e807e9148568eE)
  --> $DIR/basic.rs:8:1
   |
LL | #[rustc_symbol_name]
   | ^^^^^^^^^^^^^^^^^^^^

error: demangling(basic::main::h450e807e9148568e)
  --> $DIR/basic.rs:8:1
   |
LL | #[rustc_symbol_name]
   | ^^^^^^^^^^^^^^^^^^^^

error: demangling-alt(basic::main)
  --> $DIR/basic.rs:8:1
   |
LL | #[rustc_symbol_name]
   | ^^^^^^^^^^^^^^^^^^^^

error: def-path(main)
  --> $DIR/basic.rs:15:1
   |
LL | #[rustc_def_path]
   | ^^^^^^^^^^^^^^^^^

error: aborting due to 4 previous errors

